vbnc/vbnc/tests/Errors/EnumErrors2.vb
'Invalid enum type
Enum E1 As Double
    e
End Enum
